Subido ejercicio 1.4 y cambios en el ra